# debate-v-majority

./: .gitignore  README.md  __main__.py  aime25.py  analyze_results.py  cli.py  dashboard.py  engines.py  expand_case_studies.py  gpqa.py  gsm8k.py  launch_dashboard.py  pyproject.toml  rejudge_targets.py  requirements.txt  shared.py
.streamlit/: config.toml
scripts/: rejudge-targets
src/debate_v_majority/: __init__.py
src/debate_v_majority/cli/: __init__.py  args.py  judge.py  main_impl.py  runner.py  subset.py
src/debate_v_majority/datasets/: __init__.py  aime25.py  gpqa.py  gsm8k.py
src/debate_v_majority/engines/: __init__.py  core.py  engine_impl.py  model_config.py  runtime_env.py
src/debate_v_majority/shared/: __init__.py  core.py  errors.py  math_parse.py  normalize.py  prompt_tokens.py  thinking.py  transcripts.py
src/debate_v_majority/tools/: __init__.py  analyze_results.py  rejudge_targets.py
tests/: test_analyze_results_outputs.py  test_cli_subset.py  test_dataset_parsers.py  test_engine_helpers.py  test_rejudge_targets_refactor.py  test_scripts_help.py  test_shared_utils.py
